--- a/package.json
+++ b/package.json
@@ -18,3 +18,15 @@
     "nodemon": "^2.0.22"
   }
 }
+{
+  "name": "tg-miniapp-shop",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7"
+  }
+}
