--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "tg-miniapp-shop",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
-    "sqlite": "^4.0.25",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "csv-stringify": "^6.2.0",
-    "uuid": "^9.0.0"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
