--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
