--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "tg-miniapp-shop",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
     "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
