--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-
+{
+  "name": "telegram-shop",
+  "version": "1.0.0",
+  "description": "Магазин услуг для Telegram мини-приложения",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "express-fileupload": "^1.4.3"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
+}
