--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "express-fileupload": "^1.4.3"
   },
+  "keywords": [
+    "telegram",
+    "shop",
+    "services",
+    "mini-app"
+  ],
+  "author": "Smart Service",
+  "license": "MIT",
   "engines": {
     "node": ">=16.0.0"
   }
